[gd_scene load_steps=30 format=3 uid="uid://bq457st6cdcwu"]

[ext_resource type="Texture2D" uid="uid://bl6pyaeguems5" path="res://assets/sprites/backgrounds/playing-background.png" id="1_j4vxj"]
[ext_resource type="Texture2D" uid="uid://cmyu03818eyj0" path="res://assets/sprites/backgrounds/healthbar-icon.png" id="2_7n56m"]
[ext_resource type="Texture2D" uid="uid://b6ucg56xfxvsw" path="res://assets/sprites/snowball/snowflake1.png" id="3_6apor"]
[ext_resource type="Texture2D" uid="uid://c27tfi5271pmx" path="res://assets/sprites/powerups/ball_strengthener.png" id="3_slfmx"]
[ext_resource type="Texture2D" uid="uid://bwsy835m8tj0t" path="res://assets/sprites/snowball/snowflake2.png" id="4_dg87a"]
[ext_resource type="Texture2D" uid="uid://da2oesv0gmpma" path="res://assets/sprites/snowball/snowflake-3.png" id="5_bfog5"]
[ext_resource type="Texture2D" uid="uid://cm66phqwr0o3e" path="res://assets/sprites/snowball/snowflake-4.png" id="6_m17t3"]
[ext_resource type="Script" path="res://levels/scenes/gameplay/paddle.gd" id="7_a7hoc"]
[ext_resource type="Texture2D" uid="uid://b85f6aigf2wvr" path="res://assets/sprites/paddle/paddle-base.png" id="8_0qhnf"]
[ext_resource type="Texture2D" uid="uid://defqbxwpyle3b" path="res://assets/sprites/paddle/paddle-default-face.png" id="9_bx3ks"]
[ext_resource type="Texture2D" uid="uid://ddtlfic4b8wi4" path="res://assets/sprites/paddle/paddle-levelup-face.png" id="10_2y6bx"]
[ext_resource type="Texture2D" uid="uid://cewqwextwlbpp" path="res://assets/sprites/paddle/paddle-powerup-face.png" id="11_5v8r8"]
[ext_resource type="Script" path="res://levels/scenes/gameplay/snowball.gd" id="12_mbj8d"]
[ext_resource type="Texture2D" uid="uid://cyonv5hn0kcac" path="res://assets/sprites/snowball/snowball.png" id="13_7l4uy"]
[ext_resource type="Script" path="res://levels/scenes/gameplay/bricks_container.gd" id="14_2jmph"]

[sub_resource type="Gradient" id="Gradient_sieec"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5hrfe"]
gradient = SubResource("Gradient_sieec")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ykx17"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(400, 1, 1)
gravity = Vector3(0, 20, 0)
radial_accel_min = -1.0
radial_accel_max = -1.0
damping_min = 5.0
damping_max = 5.0
scale_min = 0.25
scale_max = 1.5
color_ramp = SubResource("GradientTexture1D_5hrfe")

[sub_resource type="Gradient" id="Gradient_yqwxj"]
colors = PackedColorArray(0.827451, 0.952941, 0.988235, 0.337255, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_25xu2"]
gradient = SubResource("Gradient_yqwxj")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g3ip0"]
particle_flag_disable_z = true
spread = 0.0
gravity = Vector3(0, 0, 0)
scale_min = 0.0
color = Color(0.843137, 0.960784, 1, 0.478431)
color_ramp = SubResource("GradientTexture1D_25xu2")

[sub_resource type="Gradient" id="Gradient_kf3e0"]
colors = PackedColorArray(0.85098, 0.968627, 1, 0, 0.384314, 0.717647, 1, 0.858824)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uprtx"]
gradient = SubResource("Gradient_kf3e0")
width = 16
height = 4
fill_from = Vector2(0.470085, 0)
fill_to = Vector2(0.5, 1)

[sub_resource type="Gradient" id="Gradient_oueyy"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_v1khd"]
gradient = SubResource("Gradient_oueyy")
width = 120
height = 20
fill = 1
fill_from = Vector2(5, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_r1r0j"]
lifetime_randomness = 0.51
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 20.87
spread = 28.374
gravity = Vector3(0, 98, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vjqqm"]
lifetime_randomness = 0.61
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.41
spread = 28.374
gravity = Vector3(0, 98, 0)

[sub_resource type="SystemFont" id="SystemFont_5jonv"]
font_names = PackedStringArray("Courier New")

[sub_resource type="LabelSettings" id="LabelSettings_7i6s2"]
font = SubResource("SystemFont_5jonv")
font_size = 25
font_color = Color(0.831373, 0.94902, 1, 1)

[node name="GamePlay" type="Node2D"]

[node name="Background" type="TextureRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
texture = ExtResource("1_j4vxj")

[node name="GameEntities" type="Node2D" parent="."]

[node name="Snow" type="Node2D" parent="GameEntities"]
position = Vector2(400, -5)

[node name="snowflakes1" type="GPUParticles2D" parent="GameEntities/Snow"]
amount = 5
process_material = SubResource("ParticleProcessMaterial_ykx17")
texture = ExtResource("3_6apor")
lifetime = 10.0
randomness = 0.9
collision_base_size = 0.0

[node name="snowflakes2" type="GPUParticles2D" parent="GameEntities/Snow"]
amount = 4
process_material = SubResource("ParticleProcessMaterial_ykx17")
texture = ExtResource("4_dg87a")
lifetime = 13.0
randomness = 0.6
collision_base_size = 0.0

[node name="snowflakes3" type="GPUParticles2D" parent="GameEntities/Snow"]
amount = 6
process_material = SubResource("ParticleProcessMaterial_ykx17")
texture = ExtResource("5_bfog5")
lifetime = 15.0
randomness = 0.7
collision_base_size = 0.0

[node name="snowflakes4" type="GPUParticles2D" parent="GameEntities/Snow"]
amount = 5
process_material = SubResource("ParticleProcessMaterial_ykx17")
texture = ExtResource("6_m17t3")
lifetime = 19.0
randomness = 0.52
collision_base_size = 0.0

[node name="ControlBricksContainer" type="Control" parent="GameEntities"]
custom_minimum_size = Vector2(800, 250)
layout_mode = 3
anchors_preset = 0
offset_top = 50.0
offset_right = 800.0
offset_bottom = 300.0

[node name="BricksContainer" type="GridContainer" parent="GameEntities/ControlBricksContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_right = -26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 11
script = ExtResource("14_2jmph")

[node name="Paddle" type="Node2D" parent="GameEntities"]
position = Vector2(400, 570)
scale = Vector2(0.75, 0.75)
script = ExtResource("7_a7hoc")

[node name="Trail" type="GPUParticles2D" parent="GameEntities/Paddle"]
position = Vector2(0, 10)
amount = 50
process_material = SubResource("ParticleProcessMaterial_g3ip0")
texture = SubResource("GradientTexture2D_uprtx")
fixed_fps = 60

[node name="PaddleBase" type="Sprite2D" parent="GameEntities/Paddle"]
texture = ExtResource("8_0qhnf")

[node name="DefaultFace" type="Sprite2D" parent="GameEntities/Paddle"]
texture = ExtResource("9_bx3ks")

[node name="LevelupFace" type="Sprite2D" parent="GameEntities/Paddle"]
visible = false
texture = ExtResource("10_2y6bx")

[node name="PowerupFace" type="Sprite2D" parent="GameEntities/Paddle"]
visible = false
texture = ExtResource("11_5v8r8")

[node name="SpeedUpGlow" type="PointLight2D" parent="GameEntities/Paddle"]
visible = false
scale = Vector2(1.04167, 1.2)
color = Color(0.282353, 0.388235, 0.333333, 1)
energy = 2.84
blend_mode = 2
texture = SubResource("GradientTexture2D_v1khd")
height = 128.0

[node name="StrengthUpGlow" type="PointLight2D" parent="GameEntities/Paddle"]
visible = false
scale = Vector2(1.04167, 1.2)
color = Color(0.364706, 0.309804, 0.431373, 1)
energy = 2.94
blend_mode = 2
texture = SubResource("GradientTexture2D_v1khd")
height = 128.0

[node name="Snowball" type="Node2D" parent="GameEntities"]
script = ExtResource("12_mbj8d")

[node name="SnowParticle1" type="GPUParticles2D" parent="GameEntities/Snowball"]
position = Vector2(393, 313)
scale = Vector2(0.2, 0.2)
amount = 3
process_material = SubResource("ParticleProcessMaterial_r1r0j")
texture = ExtResource("3_6apor")
lifetime = 0.25
randomness = 0.87
trail_lifetime = 0.75

[node name="SnowParticle2" type="GPUParticles2D" parent="GameEntities/Snowball"]
position = Vector2(393, 313)
scale = Vector2(0.2, 0.2)
amount = 2
process_material = SubResource("ParticleProcessMaterial_vjqqm")
texture = ExtResource("4_dg87a")
lifetime = 0.25
randomness = 0.87
trail_lifetime = 0.75

[node name="SnowballBase" type="Sprite2D" parent="GameEntities/Snowball"]
position = Vector2(393, 313)
texture = ExtResource("13_7l4uy")

[node name="HUD" type="Node2D" parent="."]

[node name="ControlHUD" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 800.0
offset_bottom = 50.0

[node name="HeartBar" type="TextureProgressBar" parent="HUD/ControlHUD"]
layout_mode = 2
offset_left = 18.0
offset_top = 14.0
offset_right = 105.0
offset_bottom = 40.0
min_value = 1.0
max_value = 3.0
value = 3.0
texture_progress = ExtResource("2_7n56m")

[node name="GridContainer" type="GridContainer" parent="HUD/ControlHUD"]
layout_mode = 0
offset_left = 260.0
offset_top = 10.0
offset_right = 560.0
offset_bottom = 50.0
theme_override_constants/h_separation = 30
columns = 2

[node name="Score" type="Label" parent="HUD/ControlHUD/GridContainer"]
layout_mode = 2
text = "score: 0"
label_settings = SubResource("LabelSettings_7i6s2")

[node name="Level" type="Label" parent="HUD/ControlHUD/GridContainer"]
layout_mode = 2
text = "level: 0"
label_settings = SubResource("LabelSettings_7i6s2")

[node name="CurrentPowerUp" type="Node2D" parent="HUD/ControlHUD"]
position = Vector2(700, 20)

[node name="Icon" type="Sprite2D" parent="HUD/ControlHUD/CurrentPowerUp"]
position = Vector2(0, 5)
scale = Vector2(0.75, 0.75)
texture = ExtResource("3_slfmx")

[node name="Timer" type="Timer" parent="HUD/ControlHUD/CurrentPowerUp"]
wait_time = 10.0
one_shot = true
